config/kubernetes/backend-radiodiagnosis-deploy-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: radiodiagnosis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: REGISTRY/radiodiagnosis/backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: radiodiagnosis
spec:
  selector:
    app: backend
  ports:
    - port: 5001
      targetPort: 5001
