config/kubernetes/ingress-radiodiagnosis-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radiodiagnosis
  namespace: radiodiagnosis
spec:
  ingressClassName: "nginx"
  rules:
    - host: radiodiagnosis.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: { number: 80 }

    - host: backend.radiodiagnosis.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port: { number: 5001 }
  tls:
    - hosts: ["radiodiagnosis.id"]
      secretName: radiodiagnosis-tls
    - hosts: [ "backend.radiodiagnosis.id" ]
      secretName: radiodiagnosis-tls
